--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "dev": "remix dev --manual",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
     "start": "remix-serve ./build/index.js",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "db:gen": "prisma generate",
+    "db:push": "prisma db push"
   },
   "dependencies": {
+    "@prisma/client": "5.7.0",
     "@remix-run/css-bundle": "^2.4.0",
     "@remix-run/node": "^2.4.0",
     "@remix-run/react": "^2.4.0",
@@ -18,7 +21,10 @@
     "isbot": "^3.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "remix-themes": "^1.2.2"
+    "remix-auth": "^3.6.0",
+    "remix-auth-google": "^2.0.0",
+    "remix-themes": "^1.2.2",
+    "unique-username-generator": "^1.2.0"
   },
   "devDependencies": {
     "@catppuccin/tailwindcss": "^0.1.6",
@@ -32,6 +38,7 @@
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "prisma": "^5.7.0",
     "tailwindcss": "^3.3.6",
     "typescript": "^5.1.6"
   },
