--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "start": "remix-serve ./build/index.js",
     "typecheck": "tsc",
     "db:gen": "prisma generate",
-    "db:push": "prisma db push"
+    "db:push": "prisma db push",
+    "db:format": "prisma format",
+    "db:studio": "prisma studio"
   },
   "dependencies": {
     "@prisma/client": "5.7.0",
