--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "db:studio": "prisma studio"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.1",
     "@prisma/client": "5.7.0",
     "@remix-run/css-bundle": "^2.4.0",
     "@remix-run/node": "^2.4.0",
